welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:7: error: ';' expected but '(' found.
    avance();prendBiscuit();demiTour();allerJB():poseBiscuit();demiTour();allerJB()
                                                            ^